--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -41,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
   get_it: ^7.7.0
+  dotted_border: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
